# nfts-registry-testkit

./: Cargo.toml
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs
pallets/pallet-nft/: Cargo.toml
pallets/pallet-nft/src/: .lib.rs.swp  lib.rs
pallets/pallet-va-registry/: Cargo.toml
pallets/pallet-va-registry/src/: .lib.rs.swp  lib.rs  mock.rs  tests.rs  types.rs
pallets/va_registry/: Cargo.toml
pallets/va_registry/src/: lib.rs  mock.rs
